Apparel markup done

--- a/Practice Projects/base-apparel-coming-soon-master/index.html
+++ b/Practice Projects/base-apparel-coming-soon-master/index.html
@@ -40,7 +40,7 @@
           />
           <img
             src="./images/hero-desktop.jpg"
-            class="dekstop"
+            class="desktop"
             alt="hero-desktop image"
           />
         </div>
@@ -61,10 +61,10 @@
               placeholder="Email Address"
               required
             />
+            <button class="btn">
+              <img src="./images/icon-arrow.svg" alt="icon arrow" />
+            </button>
           </form>
-          <!-- <div class="btn">
-            <img src="./images/icon-arrow.svg" alt="icon arrow" />
-          </div> -->
         </div>
       </div>
     </main>
