add error massage and icon markup

--- a/Practice Projects/base-apparel-coming-soon-master/index.html
+++ b/Practice Projects/base-apparel-coming-soon-master/index.html
@@ -61,9 +61,17 @@
               placeholder="Email Address"
               required
             />
-            <button class="btn">
+            <button class="btn" type="submit">
               <img src="./images/icon-arrow.svg" alt="icon arrow" />
             </button>
+
+            <img
+              src="./images/icon-error.svg"
+              class="error hide"
+              alt="error icon"
+            />
+
+            <p class="error-message hide">Please provide a valid email</p>
           </form>
         </div>
       </div>
@@ -77,5 +85,7 @@
         >. Coded by <a href="#">Your Name Here</a>.
       </p>
     </footer>
+
+    <script src="app.js"></script>
   </body>
 </html>
