--- a/Practice Projects/find-me/index.html
+++ b/Practice Projects/find-me/index.html
@@ -18,17 +18,38 @@
       href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
       rel="stylesheet"
     />
-    <title>FindMe</title>
+    <!-- main style sheet -->
+    <link rel="stylesheet" href="./sass/dist/css/main.min.css" />
+    <title>WikiSearchMe</title>
   </head>
   <body>
     <main>
       <h1 class="offscreen">Find Me A Wikipedia Powered Search Engine</h1>
       <section class="searchEntry">
         <h2 class="offscreen">Search Term Entry</h2>
-        <div class="logo" aria-hidden="true">FindMe</div>
+        <div class="logo" aria-hidden="true">
+          <span class="crimson">W</span>
+          <span class="yellow">i</span>
+          <span class="dark">k</span>
+          <span class="blue">i</span>
+          <span class="crimson">S</span>
+          <span class="green">e</span>
+          <span class="blue">a</span>
+          <span class="dark">r</span>
+          <span class="yellow">c</span>
+          <span class="blue">h</span>
+          <span class="crimson">M</span>
+          <span class="blue">e</span>
+          <span class="crimson exclamation">!</span>
+        </div>
         <form id="searchBar" class="searchBar">
           <label for="search" class="offscreen">Enter a search term</label>
-          <input type="text" id="search" autocomplete="on" />
+          <input
+            type="text"
+            id="search"
+            autocomplete="off"
+            placeholder="Search or type URL"
+          />
           <div
             id="clear"
             class="none button clear"
@@ -44,7 +65,7 @@
             type="submit"
             aria-label="Submit button"
           >
-            <i class="fa-solid fa-magnifying-glass"></i>
+            <i class="fa-solid fa-magnifying-glass blue"></i>
           </button>
         </form>
       </section>
@@ -56,7 +77,7 @@
         <div id="searchResults" class="searchResults">
           <div class="resultItem">
             <div class="resultTitle">
-              <a href="">Dasch</a>
+              <a href="#">Dasch</a>
             </div>
             <div class="resultContents">
               <div class="resultImage">
