comment out static results

--- a/Practice Projects/find-me/index.html
+++ b/Practice Projects/find-me/index.html
@@ -20,6 +20,8 @@
     />
     <!-- main style sheet -->
     <link rel="stylesheet" href="./sass/dist/css/main.min.css" />
+    <!-- js -->
+    <script src="js/main.js" type="module"></script>
     <title>WikiSearchMe</title>
   </head>
   <body>
@@ -75,7 +77,8 @@
           <div id="stats" class="stats" aria-live="assertive"></div>
         </div>
         <div id="searchResults" class="searchResults">
-          <div class="resultItem">
+          <!-- build dynamically -->
+          <!--  <div class="resultItem">
             <div class="resultTitle">
               <a href="#">Dasch</a>
             </div>
@@ -94,7 +97,7 @@
                 </p>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
       </section>
     </main>
